--- a/css/header.css
+++ b/css/header.css
@@ -7,8 +7,7 @@
 /* -----------------------------------------------------------------------------------*/
 /*  Primeiro parte do header   */
 .primeiro_cabecalho{
-  max-width: 1280px;
-  min-width: 500px;
+  width: 100%;
   height: 98px;
   display: flex;
   align-items:center ; /*alinha os elementos no centro   */
@@ -122,9 +121,8 @@
 
 /*  Segunda parte do header   */
 .segunda_cabecalho{
- 
-  max-width: 1280px;
-  min-width: 500px;
+
+  width: 100%;
   overflow-x:auto;
   height: 45px;
   background-color: rgb(233, 64, 64);
