--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,12 +1,167 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; 
+}
 
-.body_form{
-  background-color: rgb(228, 154, 154);
-  width: 30%;
-  margin: auto;
-  padding-left: 3%;
-  margin-top: 10%;
-  padding-top: 10%;
-  border-radius: 8%;
+main {
+  width: 100%;
+  min-height: 800px;
+  background: linear-gradient(90deg, #e13131 0%, #eb979c 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background-color: #f39696;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+  width: 400px;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.header {
+  background-color: rgb(239, 98, 98);
+  padding: 20px;
+}
+
+.form {
+  padding: 20px;
+}
+
+.form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.form-control label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.form-control input {
+  border: 2px solid #f0f0f0;
+  display: block;
+  border-radius: 10px;
+  font-size: 14px;
+  width: 100%;
+  padding: 10px;
+  background-color: rgb(238, 208, 208);
+}
+
+.form-control i {
+  position: absolute;
+  top: 37px;
+  right: 10px;
+  visibility: hidden;
+}
+
+.form-control small {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form button {
+  background-color: #f71212;
+  border: 2px solid #ff0000;
+  color: #fff;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.form button:hover{
+
+  background-color: #d3e40d;
+  border: 2px solid #ff0000;
+  color: rgb(222, 20, 20);
+
+
+}
+
+/* Error and Success */
+.form-control.success input {
+  border-color: #2ecc71;
+}
+
+.form-control.error input {
+  border-color: #e74c3c;
+}
+
+.form-control.success i.fa-check-circle {
+  color: #2ecc71;
+  visibility: visible;
+}
+
+.form-control.error i.fa-exclamation-circle {
+  color: #e74c3c;
+  visibility: visible;
+}
+
+.form-control.error small {
+  visibility: visible;
+  color: #db1701;
+}
+
+
+/*responsividade do formulario */
+
+@media (max-width:415px) and (min-width:395px) {
+
+  .container {
+    background-color: #f39696;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+    width: 380px;
+    max-width: 100%;
+    overflow: hidden;
+  }
+
+}
+
+@media (max-width:394px)and (min-width:374px){
+
+  .container {
+    background-color: #f39696;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+    width: 360px;
+    max-width: 100%;
+    overflow: hidden;
+  }
+
+}
+
+@media (max-width:373px)and (min-width:349px){
+
+  .container {
+    background-color: #f39696;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+    width: 330px;
+    max-width: 100%;
+    overflow: hidden;
+  }
+
+}
+
+@media (max-width:348px)and (min-width:320px){
+
+  .container {
+    background-color: #f39696;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.475);
+    width: 310px;
+    max-width: 100%;
+    overflow: hidden;
+  }
 
 }
 
