--- a/css/body_pet_carrossel.css
+++ b/css/body_pet_carrossel.css
@@ -3,15 +3,15 @@ body{
   padding: 0;
   width: 100%;
   height: 100vh;
-
+  
 }
 
 
 main{
   margin-top: 2%;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
-  
+
 }
 
 
@@ -39,14 +39,14 @@ main{
 
 .slide img{
   width: 100%;
-  height: 110%;
+  height: 65%;
 
 }
 
 .label_nav{
   position: absolute;
   width: 100%;
-  margin-top: 0.30%;
+  margin-top: -14%;
   display: flex;
   justify-content:center;
 }
@@ -99,7 +99,7 @@ main{
 .nav_auto{
   position: absolute;
   width: 100%;
-  margin-top: 26.3%;
+  margin-top:28.1%;
   display: flex;
   justify-content: center;
 }
@@ -124,4 +124,9 @@ main{
 #radio4:checked ~ .nav_auto .auto_btn4{
   background-color: rgb(237, 35, 35);
 }
+
+/* ============================================================================ */
+
+
+
 
