--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,5 @@
 footer{
-
-  position: absolute;
-  left: 0%;
-  right:0%;
-  bottom: 0%;
+  margin-top: 3%;
   background-color: rgb(213, 33, 33);
 }
 
