--- a/css/body_pet.css
+++ b/css/body_pet.css
@@ -6,7 +6,7 @@
 
 /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
 .elementoUm_section{
-  background-color: #f2aeae;
+  background-color: #f39595;
   margin-top: -12%;
   padding-top:2% ;
   padding-bottom: 2%;
@@ -27,16 +27,40 @@
 }
 
 .elementoUm_article_div{
-  background-color: white;
+  background-color: rgb(247, 243, 180);
   border-radius: 10px;
  
 }
 
 .elementoUm_article_div  p {
-  
-
+  margin-left: 5%;
+  font-size: 120%;
 
 }
+
+.elementoUm_article_div  button{
+  padding-right:5%;
+  padding-left: 5%;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  margin-top: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 5%;
+  background-color: #ef8d8d;
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  font-weight: 800;
+  color:white;
+  cursor: pointer;
+}
+
+.elementoUm_article_div  button:hover{
+  background-color: rgb(213, 33, 33);
+
+}
+
 
 .elementoUm_article_div img{
   width: 100%;
@@ -68,14 +92,36 @@
 }
 
 .elementoDois_article_div{
-  background-color: white;
+  background-color: rgb(247, 243, 180);
   border-radius: 10px;
  
 }
 
-.elementoUm_article_div  p {
-  
+.elementoDois_article_div  p {
+  margin-left: 5%;
+  font-size: 120%;
 
+}
+
+.elementoDois_article_div  button{
+  padding-right:5%;
+  padding-left: 5%;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  margin-top: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-bottom: 5%;
+  background-color: #ef8d8d;
+  border-radius: 10px;
+  border: none;
+  font-weight: 800;
+  color:white;
+  cursor: pointer;
+}
+
+.elementoDois_article_div  button:hover{
+  background-color: rgb(213, 33, 33);
 
 }
 
@@ -87,3 +133,19 @@
 
 }
 /*--fim segundo block de imagens------------------------------------------------------------------------------------*/
+
+.whatsapp{
+  position: fixed;
+  top: 90%;
+  left:95%;
+}
+
+.whatsapp p {
+  font-size: 80%;
+  font-weight: 800;
+}
+
+#whats{
+  font-size: 300%;
+  color: rgb(16, 123, 17);
+}
