--- a/css/body_variedades.css
+++ b/css/body_variedades.css
@@ -1,74 +1,169 @@
-body{
+*{
     margin: 0;
-    padding: 0;
+    padding:0 ;
     box-sizing: border-box;
-}
-
-.carousel{
+  } /* zera todas as configurações padroes do html */
+  
+  /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
+  .elementoUm_section{
+    background-color: #f39595;
+    margin-top: -1%;
+    padding-top:2% ;
+    padding-bottom: 2%;
     width: 100%;
-    height: 100px;
-    background-color: aqua;
-    margin-bottom: 30px;
-}
-
-#imgsize{
-    width: 246px;
-    height: 246px;
-}
-
-.produtcts{
-    flex-direction: column;
     display: flex;
-}
-
-.products1{
-    display: flex;
-    justify-content: center;
-}
-
-.products2{
-    display: flex;
-    justify-content: center;
-}
-
-.products1 div{
-    display: inline-block;
-    margin: 15px;
-    border: 2px solid rgb(213, 33, 33);
-    width: 250px;
-    height: 350px;
-    justify-content: center;
-}
-
-.products2 div{
-    display: inline-block;
-    margin: 15px;
-    border: 2px solid rgb(213, 33, 33);
-    width: 250px;
-    height: 350px;
+    justify-content: space-around;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     
-}
-
-ul{
-    list-style: none;
-    position: relative;
-    align-items:center;
-    justify-content: center;
-    background-color: rgba(172, 164, 164, 0.329);
-    padding: 7px;
-    bottom: 3px;
-}
-
-li{
-    padding: 5px;
-    position: relative;
-}
-
-@media screen and(max-width:500px){
-    .products1 div{
-    margin:0;
-    height:40px;
-    line-height:40;
-    display:block;
-    }  
-    }
+  }
+  
+  .elementoUm_article{
+    display: flex;
+    column-gap: 2%;
+    align-items: center;
+    
+  
+  }
+  
+  .elementoUm_article_div{
+    background-color: rgb(247, 243, 180);
+    box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
+    border-radius: 10px;
+    transition: background-color 1000ms;
+    transition-delay:all 45ms
+   
+  }
+  
+  .elementoUm_article_div:hover{
+    background-color: rgb(247, 180, 185);
+    border:solid 2px rgb(238, 9, 9);
+  
+  }
+  
+  .elementoUm_article_div  p {
+    margin-left: 5%;
+    font-size: 120%;
+  
+  }
+  
+  .elementoUm_article_div  button{
+    padding-right:5%;
+    padding-left: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 5%;
+    background-color: #ef8d8d;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    font-weight: 800;
+    color:white;
+    cursor: pointer;
+  }
+  
+  .elementoUm_article_div  button:hover{
+    background-color: rgb(213, 33, 33);
+  
+  }
+  
+  
+  .elementoUm_article_div img{
+    width: 100%;
+    height: 40vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  /*--fim primeiro block de imagens------------------------------------------------------------------------------------*/
+  
+  /* inicio segundo block de imagens-------------------------------------------------------------------------------------------- */
+  .elementoDois_section{
+    background-color: #f2aeae;
+    margin-top: 0%;
+    padding-top:2% ;
+    padding-bottom: 2%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  
+  .elementoDois_article{
+    display: flex;
+    column-gap: 2%;
+    align-items: center;
+    
+  
+  }
+  
+  .elementoDois_article_div{
+    background-color: rgb(247, 243, 180);
+    box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
+    border-radius: 10px;
+    transition: background-color 1000ms;
+    transition-delay:all 45ms
+   
+  }
+  
+  .elementoDois_article_div:hover{
+    background-color: rgb(247, 180, 185);
+    border:solid 2px rgb(238, 9, 9);
+  
+  }
+  
+  .elementoDois_article_div  p {
+    margin-left: 5%;
+    font-size: 120%;
+  
+  }
+  
+  .elementoDois_article_div  button{
+    padding-right:5%;
+    padding-left: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 5%;
+    background-color: #ef8d8d;
+    border-radius: 10px;
+    border: none;
+    font-weight: 800;
+    color:white;
+    cursor: pointer;
+  }
+  
+  .elementoDois_article_div  button:hover{
+    background-color: rgb(213, 33, 33);
+  
+  }
+  
+  .elementoDois_article_div img{
+    width: 100%;
+    height: 40vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  
+  }
+  /*--fim segundo block de imagens------------------------------------------------------------------------------------*/
+  
+  .whatsapp{
+    position: fixed;
+    top: 90%;
+    left:95%;
+  }
+  
+  .whatsapp p {
+    font-size: 80%;
+    font-weight: 800;
+  }
+  
+  #whats{
+    font-size: 300%;
+    color: rgb(16, 123, 17);
+  }
