primeiros testes com o responsivo nas imagens

--- a/css/body_farmacia.css
+++ b/css/body_farmacia.css
@@ -5,25 +5,20 @@
 } /* zera todas as configurações padroes do html */
 
 /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
-.elementoUm_section{
-  background-color: #f39595;
-  margin-top: 2.6%;
-  padding-top:2% ;
-  padding-bottom: 2%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  
-}
 
 .elementoUm_article{
   display: flex;
-  column-gap: 2%;
+  background-color: #f39595;
+  margin-top: 2.6%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
   align-items: center;
+  justify-content: space-around;  
+  flex-wrap: wrap;
   
-
 }
 
 .elementoUm_article_div{
@@ -31,7 +26,8 @@
   box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
   border-radius: 10px;
   transition: background-color 1000ms;
-  transition-delay:all 100000s
+  transition-delay:all 100000s;
+  width:30%;
  
 }
 
@@ -43,7 +39,7 @@
 
 .elementoUm_article_div  p {
   margin-left: 5%;
-  font-size: 120%;
+  font-size: 110%;
 
 }
 
@@ -73,30 +69,24 @@
 
 .elementoUm_article_div img{
   width: 100%;
-  height: 40vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 /*--fim primeiro block de imagens------------------------------------------------------------------------------------*/
 
 /* inicio segundo block de imagens-------------------------------------------------------------------------------------------- */
-.elementoDois_section{
-  background-color: #f2aeae;
-  margin-top: 0%;
-  padding-top:2% ;
-  padding-bottom: 2%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
 
 .elementoDois_article{
   display: flex;
-  column-gap: 2%;
+  background-color: #eca7a7;
+  margin-top: 0px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
   align-items: center;
-  
+  justify-content: space-around; 
 
 }
 
@@ -104,8 +94,8 @@
   background-color: rgb(247, 243, 180);
   box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
   border-radius: 10px;
-   transition: background-color 1000ms;
- 
+  transition: background-color 1000ms;
+  width:30%;
 }
 
 .elementoDois_article_div:hover{
@@ -116,7 +106,7 @@
 
 .elementoDois_article_div  p {
   margin-left: 5%;
-  font-size: 120%;
+  font-size: 110%;
 
 }
 
@@ -144,7 +134,6 @@
 
 .elementoDois_article_div img{
   width: 100%;
-  height: 40vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
