--- a/css/body_home.css
+++ b/css/body_home.css
@@ -102,26 +102,21 @@
 
 
 /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
-.elementoUm_section ,
-.elementoDois_section,
-.elementoTres_section {
-  background-color: #f39595;
-  margin-top: 0%;
-  padding-top:2% ;
-  padding-bottom: 2%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  
-}
 
 .elementoUm_article ,
 .elementoDois_article,
 .elementoTres_article {
   display: flex;
-  column-gap: 2%;
+  background-color: #f39595;
+  margin-top: 0%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
   align-items: center;
-  
+  justify-content: space-around;  
+  flex-wrap: wrap;
 
 }
 
@@ -133,8 +128,9 @@
   border-radius: 10px;
   cursor: pointer;
   transition: background-color 1000ms;
-  transition-delay:all 45ms
- 
+  transition-delay:all 45ms;
+  width:30%;
+  
 }
 
 .elementoUm_article_div:hover ,
@@ -149,7 +145,7 @@
 .elementoDois_article_div p,
 .elementoTres_article_div p {
   margin-left: 5%;
-  font-size: 120%;
+  font-size: 110%;
 
 }
 
@@ -185,12 +181,11 @@
 .elementoDois_article_div img, 
 .elementoTres_article_div img{
   width: 100%;
-  height: 40vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 
-.elementoTres_section {
+.elementoTres_article {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 
