--- a/css/body_pet.css
+++ b/css/body_pet.css
@@ -5,25 +5,21 @@
 } /* zera todas as configurações padroes do html */
 
 /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
-.elementoUm_section{
-  background-color: #f39595;
-  margin-top: -12%;
-  padding-top:2% ;
-  padding-bottom: 2%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  
-}
 
 .elementoUm_article{
   display: flex;
-  column-gap: 2%;
+  background-color: #f39595;
+  margin-top: -12%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
   align-items: center;
-  
-
+  justify-content: space-around;  
+  flex-wrap: wrap;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .elementoUm_article_div{
@@ -31,8 +27,8 @@
   box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
   border-radius: 10px;
   transition: background-color 1000ms;
-  transition-delay:all 45ms
- 
+  transition-delay:all 45ms;
+  width:30%;
 }
 
 .elementoUm_article_div:hover{
@@ -43,7 +39,7 @@
 
 .elementoUm_article_div  p {
   margin-left: 5%;
-  font-size: 120%;
+  font-size: 110%;
 
 }
 
@@ -73,31 +69,27 @@
 
 .elementoUm_article_div img{
   width: 100%;
-  height: 40vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 /*--fim primeiro block de imagens------------------------------------------------------------------------------------*/
 
 /* inicio segundo block de imagens-------------------------------------------------------------------------------------------- */
-.elementoDois_section{
-  background-color: #f2aeae;
-  margin-top: 0%;
-  padding-top:2% ;
-  padding-bottom: 2%;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
 
 .elementoDois_article{
   display: flex;
-  column-gap: 2%;
+  background-color: #eca7a7;
+  margin-top: 0px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
   align-items: center;
+  justify-content: space-around; 
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   
-
 }
 
 .elementoDois_article_div{
@@ -105,8 +97,8 @@
   box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
   border-radius: 10px;
   transition: background-color 1000ms;
-  transition-delay:all 45ms
- 
+  transition-delay:all 45ms;
+  width:30%;
 }
 
 .elementoDois_article_div:hover{
@@ -117,7 +109,7 @@
 
 .elementoDois_article_div  p {
   margin-left: 5%;
-  font-size: 120%;
+  font-size: 110%;
 
 }
 
@@ -145,7 +137,6 @@
 
 .elementoDois_article_div img{
   width: 100%;
-  height: 40vh;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
