--- a/css/header.css
+++ b/css/header.css
@@ -5,156 +5,168 @@
 } /* zera todas as configurações padroes do html */
 
 /* -----------------------------------------------------------------------------------*/
+header{
+  width: 100%;
+  background-color: aquamarine;
+}
+
 /*  Primeiro parte do header   */
 .primeiro_cabecalho{
   width: 100%;
   height: 98px;
   display: flex;
   align-items:center ; /*alinha os elementos no centro   */
-  /*justify-content:space-around;*/
-  background-color: rgb(213, 33, 33);
-  padding: 1%;
-  gap: 0% 5% /* o primeiro alinha a linha o segundo alinha a coluna   */
-  
-}
-
-.form_primeiro_cabecalho{
-
-  border:1px solid whitesmoke;
-  border-radius: 0.3em;
-  padding: 1%;
-  padding-left: -15%;
-  width: 47%;
-  border:none
-  
- 
-
-}
-
-.form_primeiro_cabecalho2{
-  width: 11%;
-  display: flex;
-  align-items: center;
   justify-content:space-around;
-  color: whitesmoke;
-  justify-content:left;
-  gap: 0% 4%
- 
+  background-color: rgb(213, 33, 33);
+  
 }
 
- .form_primeiro_cabecalho3{
-  width: 9%;
-  display: flex;
-  align-items:center;
-  justify-content:left;
-  color: whitesmoke;
-  gap: 5% 4% 
-
+.article_form1,
+.imagem_logo ,
+.all_button {
+  /* background-color: blueviolet;*/
 
 }
 
-.form_primeiro_cabecalho4{
-  width: 9%;
-  display: flex;
-  align-items:center;
-  justify-content:left;
-  color: whitesmoke;
-  gap: 5% 4% 
-
+.imagem_logo  {
+  width: 10%;
+  margin-right: 10%;
 
 }
 
-.text_botao2{
-  width: 100%;
+.imagem_logo_img{
+  width: 105%;
 }
 
+.article_form1{
+  width: 35%;
+  margin-left: -10%;
+}
 
-.caixa_texto , .botao{
-
-   font-size: 1.2em;
-   border-radius: 0.2em;
-   border: none;
-   padding: 0.2em;
+.caixa_texto{
+  width: 90%;
+  font-size: 100%;
+  height: 36px;
+  border-radius: 7px;
+  border: none;
 
 }
 
 .botao{
-
+  margin-left: -13.7%; 
+  width: 13%;
+  height: 34px;
   cursor: pointer;
   background-color: rgb(192, 242, 29);
   color: rgb(243, 18, 18);
-  width: 14%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
-
+  border: none;
+  font-size: 100%;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  
 }
-
 .botao:hover{
-
   background-color: red;
   color: whitesmoke;
 }
 
+.all_button {
+  display: flex;
+  width: 30%;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 1%;
+  padding-bottom: 1%;
+ 
+}
 
+.article_form2{
+  background-color: red;
+  padding-top: 2%;
+  padding-bottom: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-radius: 10px;
+}
 
-.botao2{
+.article_form3{
+  background-color: red;
+  padding-top: 2%;
+  padding-bottom: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-radius: 10px;
 
-  font-size: 1.3em;
-  cursor: pointer;
+}
+
+#bota2_i{
   background-color: rgb(192, 242, 29);
+  padding-top:10%;
+  padding-bottom: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
   color: rgb(243, 18, 18);
-  width:55%;
-  border:none;
-  height: 30px;
-  border-radius: 0.3em;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
-  text-align: center;
-  padding-top: 4%;
-  padding-bottom: 20%;
-
+  border-radius: 7px;
+  font-size: 120%;
+  cursor: pointer;
 }
 
-.botao2:hover{
+#bota3_i{
+  background-color: rgb(192, 242, 29);
+  padding-top:10%;
+  padding-bottom: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  color: rgb(243, 18, 18);
+  border-radius: 7px;
+  font-size: 120%;
+  cursor: pointer;
+}
 
+#bota2_i:hover,
+#bota3_i:hover{
   background-color: red;
   color: whitesmoke;
 }
+
+
+.text_botao2 ,
+.text_botao3 ,
+.text_botao4 {
+ color: whitesmoke;
+ padding-top: 2%;
+ line-height: -27%;
+}
+
+.imagem_logo4{
+  width: 10%;
+  margin-left: -20%;
+}
+
+.imagem_logo_img4{
+  width: 115%;
+}
+
+.form_primeiro_cabecalho4{
+  display: flex;
+  width: 15%;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 
 .botao4{
-
-  font-size: 1.3em;
-  cursor: pointer;
   background-color: rgb(192, 242, 29);
+  padding-top:7%;
+  padding-bottom: 7%;
+  padding-left: 7%;
+  padding-right: 10%;
+  margin-left: 40%;
   color: rgb(243, 18, 18);
-  width:110%;
-  border:none;
-  height: 30px;
-  border-radius: 0.3em;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
-  text-align: center;
-  padding-top: 4%;
-  padding-bottom: 20%;
-  margin-left: 10%;
-  padding-right: 15%;
-  padding-left: 15%;
-
-}
-
-
-.botao4:hover{
-
-  background-color: red;
-  color: whitesmoke;
-}
-
-.caixa_texto{
-  width: 75%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
-
-}
-
-.correcao{
-  display: none;
-  color: rgb(213, 33, 33);
+  border-radius: 7px;
+  font-size: 150%;
+  cursor: pointer;
 }
 
 
@@ -164,46 +176,32 @@
 
 /*  Segunda parte do header   */
 .segunda_cabecalho{
-
-  width: 100%;
-  overflow-x:auto;
-  height: 45px;
-  background-color: rgb(233, 64, 64);
-  display: flex;
-  align-items:center ; /*alinha os elementos no centro   */
-   justify-content:space-around; 
-   padding: 0em;
-   gap: 100% 5% /* o primeiro alinha a linha o segundo alinha a coluna   */
-  
+ background-color: rgb(233, 64, 64);
+ width: 100%;
+ height: 40px;
+ display: flex;
+ align-items: center;
+ justify-content: space-around;
+ 
 }
 
 .link{
-
-  font-size: 1.1em;
-  width: 25%;
-  height: 45px;
-  background-color: rgb(237, 35, 35);
-  color: rgb(240, 242, 234);
-  display: flex;
-  align-items:center ; /*alinha os elementos no centro   */
-   justify-content:left; 
-   padding: 0em;
-   gap: 5% 5% /* o primeiro alinha a linha o segundo alinha a coluna   */
+ background-color: rgb(237, 35, 35);
+ display: flex;
+ width: 15%;
+ justify-content: space-around;
+ color: whitesmoke;
+ padding: 0.80%;
    
-
 }
 
 .abas{
-
-  font-size: 1.1em;
-  width: 90%;
-  height: 45px;
-  color: rgb(240, 242, 234);
+  /* background-color: rgb(64, 182, 182);*/
   display: flex;
-  align-items:center ; /*alinha os elementos no centro   */
-   justify-content:space-evenly; 
-   padding: 0em;
-   gap: 50% 5% /* o primeiro alinha a linha o segundo alinha a coluna   */
+  width:80%;
+  justify-content: space-around;
+  padding-top: 10px;
+  color: whitesmoke;
    
 }
 
@@ -225,197 +223,30 @@
 
 }
 
-.mercado:hover{
+.mercado:hover ,
+.pet:hover ,
+.farmacia:hover,
+.oferta:hover {
   color: rgb(199, 233, 64);
 
 }
 
-.pet:hover{
-  color: rgb(199, 233, 64);
-
-}
-
-.farmacia:hover{
-  color: rgb(199, 233, 64);
-
-}
-
-.oferta:hover{
-  color: rgb(199, 233, 64);
-
-}
-
-#pag_mercado{
+#pag_mercado,
+#pag_pet ,
+#pag_farmacia {
   background-color: rgb(199, 233, 64);
   color: rgb(237, 35, 35);
   border-radius: 5px;
   padding: 6px;
+  margin-top: -6px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
 
 }
 
-#pag_pet{
-  background-color: rgb(199, 233, 64);
-  color: rgb(237, 35, 35);
-  border-radius: 5px;
-  padding: 6px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
 
-}
-
-#pag_farmacia{
-  background-color: rgb(199, 233, 64);
-  color: rgb(237, 35, 35);
-  border-radius: 5px;
-  padding: 6px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
-
-}
 
 /*  Segunda parte do header   */
 /* ------------------------------------------------------------------------------------FIM */
-
-
-
-@media (max-width:732px) and (min-width:666px) {
-
-  .link{
-  
-    font-size: 1.0em;
-
-  }
-
-  .oferta{
-    display: none;
-  }
-
-
-}
-
-@media (max-width:665px) and (min-width:100px) {
-
-  .texto_nav{
-  display: none;
-
-  }
-
-.link{
-
-  width: 7%;
-  align-items:center
-  
-}
-
-.oferta{
-  display: none;
-}
-
-}
-
-@media (max-width:392px)and (min-width:280px){
-
-  .abas{
-    font-size: 0.80em;
-  }
-
-
-  .oferta{
-    display: none;
-  }
-
-}
-
-@media (max-width:1083px)and (min-width:10px){
-
- .text_botao2 , .text_botao3 {
-  
-  display: none;
-  width: -1%;
-
- }
-
-
-}
-
-@media (max-width:500px)and (min-width:250px){
-
-  .form_primeiro_cabecalho2 {
-
-    width: 36%;
-    margin-right:-10%;
-    
-  }
-
-  .form_primeiro_cabecalho3{
-   
-    display: none;
-
-  }
-
-  .form_primeiro_cabecalho{
-
-    width: 70%;
-  }
-
-  .caixa_texto{
-   
-    font-size: 120%;
-
-  }
-
-  .botao{
-   
-    width: 18%;
-
-  }
-
-  .imagem {
-   
-    width: 130%;
-    height:10vh
-
-  }
-
-  .oferta{
-    display: none;
-  }
-
-}
-
-@media (max-width:1280px)and (min-width:800px){
-
-.botao4{
-
-  margin-left: 680%;
-}
-
-}
-
-@media (max-width:799px)and (min-width:600px){
-
-  .botao4{
-  
-    margin-left: 580%;
-  }
-
-  .oferta{
-    display: none;
-  }
-  
-  }
-
-  @media (max-width:599px)and (min-width:300px){
-
-    .botao4{
-    
-      margin-left: 380%;
-    }
-
-    .oferta{
-      display: none;
-    }
-    
-    }
 
 
 
