alteração na responsividade

--- a/css/body_home.css
+++ b/css/body_home.css
@@ -210,3 +210,45 @@
   font-size: 300%;
   color: rgb(16, 123, 17);
 }
+
+@media  (max-width:741px){
+    
+  .cabecalho_imagens{
+
+    margin-top: -65px;
+  }
+
+  .elementoUm_article{
+  flex-direction: column;
+
+  }
+
+  .elementoDois_article{
+    flex-direction: column;
+  
+    }
+
+    .elementoTres_article{
+      flex-direction: column;
+    
+      }
+
+    .elementoUm_article_div{
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
+    }
+
+    .elementoDois_article_div{
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
+    }
+
+    .elementoTres_article_div{
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
+    }
+
+  }
