--- a/css/body_variedades_carrossel.css
+++ b/css/body_variedades_carrossel.css
@@ -126,3 +126,23 @@ main{
 }
 
 /* ============================================================================ */
+
+
+@media  (max-width:741px){
+
+  .slide{
+    width: 25%;
+    height: 20vh;
+    position: relative;
+    transition: 2s;
+  }
+ 
+  .nav_auto div {
+    display: none;
+  
+  }
+
+  .label_nav{
+    display: none;
+  }
+}
