--- a/css/body_variedades.css
+++ b/css/body_variedades.css
@@ -163,6 +163,7 @@
 
   .elementoUm_article{
   flex-direction: column;
+  
 
   }
 
@@ -172,13 +173,15 @@
     }
 
     .elementoUm_article_div{
-      width: 55%;
-      margin-bottom: 4%;
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
     }
 
     .elementoDois_article_div{
-      width: 55%;
-      margin-bottom: 4%;
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
     }
 
   }
