--- a/css/header.css
+++ b/css/header.css
@@ -242,8 +242,44 @@ header{
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.392);
 
 }
-
-
-
 /*  Segunda parte do header   */
 /* ------------------------------------------------------------------------------------FIM */
+
+@media (max-width:795px){
+
+.oferta{
+  display: none;
+}
+
+.texto_nav{
+  display: none;
+}
+
+.text_botao2 ,
+.text_botao3 {
+  display: none;
+}
+
+
+#bota3_i{
+ 
+  padding-left: 30%;
+  padding-right: 30%;
+  
+}
+
+#bota2_i{
+  padding-left: 50%;
+  padding-right: 50%;
+  padding-top:15%;
+  padding-bottom: 15%;
+
+}
+
+.imagem_logo  {
+  width: 25%;
+ 
+}
+
+
+}
