--- a/css/body_farmacia.css
+++ b/css/body_farmacia.css
@@ -169,13 +169,15 @@
     }
 
     .elementoUm_article_div{
-      width: 55%;
-      margin-bottom: 4%;
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
     }
 
     .elementoDois_article_div{
-      width: 55%;
-      margin-bottom: 4%;
+      width: 80%;
+      margin-top:3%;
+      margin-bottom: 7%;
     }
 
   }
