--- a/css/body_home.css
+++ b/css/body_home.css
@@ -1,1 +1,254 @@
-' vou iniciar a home teg
+*{
+    margin: 0;
+    padding:0 ;
+    box-sizing: border-box;
+  } /* zera todas as configurações padroes do html */
+  
+  .cabecalho_imagens{
+    background: linear-gradient(90deg, #e40a0a 0%, #e96c74 100%);
+    margin-top: -15%;
+    padding-top:1% ;
+    padding-bottom: 1%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: space-between; 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  
+  .cabecalho_imagens div{
+    display: flex;
+    align-items:center;
+    column-gap: 10%;
+  }
+  
+  .cabecalho_imagens  div p { 
+    color: white;
+    font-weight: 700;
+    font-size: 125%;
+   
+  }
+  
+  .cabecalho_imagens div i{ 
+    color: white;
+    font-weight: 700;
+  }
+  
+  
+  .cabecalho_imagens2{
+    background: linear-gradient(90deg, #e40a0a 0%, #e96c74 100%);
+    margin-top: 0%;
+    padding-top:1% ;
+    padding-bottom: 1%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: space-between; 
+  
+  }
+  
+  .cabecalho_imagens2 div{
+    display: flex;
+    align-items:center;
+    column-gap: 10%;
+  }
+  
+  .cabecalho_imagens2  div p { 
+    color: white;
+    font-weight: 700;
+    font-size: 125%;
+    white-space:nowrap;
+   
+  }
+  
+  .cabecalho_imagens2 div i{ 
+    color: white;
+    font-weight: 700;
+  
+  }
+  
+  
+  
+  
+  .cabecalho_imagens3{
+    background: linear-gradient(90deg, #e40a0a 0%, #e96c74 100%);
+    margin-top: 0%;
+    padding-top:1% ;
+    padding-bottom: 1%;
+    padding-left: 2%;
+    display: flex;
+    justify-content: space-between; 
+  
+  }
+  
+  .cabecalho_imagens3 div{
+    display: flex;
+    align-items:center;
+    column-gap: 10%;
+  }
+  
+  .cabecalho_imagens3 div p { 
+    color: white;
+    font-weight: 700;
+    font-size: 125%;
+    white-space:nowrap;
+   
+  }
+  
+  .cabecalho_imagens3 div i{ 
+    color: white;
+    font-weight: 700;
+  
+  }
+  
+  
+  /* inicio primeiro block de imagens-------------------------------------------------------------------------------------------- */
+  
+  .elementoUm_article ,
+  .elementoDois_article,
+  .elementoTres_article {
+    display: flex;
+    background-color: #f39595;
+    margin-top: 0%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 100%;
+    padding-right: 5%;
+    padding-left: 5%;
+    align-items: center;
+    justify-content: space-around;  
+    flex-wrap: wrap;
+  
+  }
+  
+  .elementoUm_article_div ,
+  .elementoDois_article_div,
+  .elementoTres_article_div{
+    background-color: rgb(247, 243, 180);
+    box-shadow: 8px 8px 8px rgba(15, 15, 15, 0.392);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 1000ms;
+    transition-delay:all 45ms;
+    width:30%;
+    
+  }
+  
+  .elementoUm_article_div:hover ,
+  .elementoDois_article_div:hover,
+  .elementoTres_article_div:hover{
+    background-color: rgb(247, 180, 185);
+    border:solid 2px rgb(238, 9, 9);
+  
+  }
+  
+  .elementoUm_article_div  p ,
+  .elementoDois_article_div p,
+  .elementoTres_article_div p {
+    margin-left: 5%;
+    font-size: 100%;
+  
+  }
+  
+  .elementoUm_article_div  button ,
+  .elementoDois_article_div button,
+  .elementoTres_article_div button {
+    padding-right:5%;
+    padding-left: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 5%;
+    background-color: #ef8d8d;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    font-weight: 800;
+    color:white;
+    cursor: pointer;
+  }
+  
+  .elementoUm_article_div  button:hover ,
+  .elementoDois_article_div button:hover ,
+  .elementoTres_article_div button:hover {
+    background-color: rgb(213, 33, 33);
+  
+  }
+  
+  
+  .elementoUm_article_div img ,
+  .elementoDois_article_div img, 
+  .elementoTres_article_div img{
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  
+  .elementoTres_article {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  
+  }
+  /*--fim primeiro block de imagens------------------------------------------------------------------------------------*/
+  
+  
+  
+  
+  .whatsapp{
+    position: fixed;
+    top: 90%;
+    left:95%;
+  }
+  
+  .whatsapp p {
+    font-size: 80%;
+    font-weight: 800;
+  }
+  
+  #whats{
+    font-size: 300%;
+    color: rgb(16, 123, 17);
+  }
+  
+  @media  (max-width:741px){
+      
+    .cabecalho_imagens{
+  
+      margin-top: -65px;
+    }
+  
+    .elementoUm_article{
+    flex-direction: column;
+  
+    }
+  
+    .elementoDois_article{
+      flex-direction: column;
+    
+      }
+  
+      .elementoTres_article{
+        flex-direction: column;
+      
+        }
+  
+      .elementoUm_article_div{
+        width: 80%;
+        margin-top:3%;
+        margin-bottom: 7%;
+      }
+  
+      .elementoDois_article_div{
+        width: 80%;
+        margin-top:3%;
+        margin-bottom: 7%;
+      }
+  
+      .elementoTres_article_div{
+        width: 80%;
+        margin-top:3%;
+        margin-bottom: 7%;
+      }
+  
+    }
